Реализована функция поиска песен. Доработка оформления
