# cmd/docs/swagger.json
@@ -88,12 +88,14 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Название группы (обязательно).",
                         "name": "group",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
+                        "description": "Название песни (обязательно).",
                         "name": "song",
                         "in": "query",
                         "required": true
@@ -126,12 +128,14 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Название группы (обязательно).",
                         "name": "group",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
+                        "description": "Название песни (обязательно).",
                         "name": "song",
                         "in": "query",
                         "required": true
@@ -152,57 +156,70 @@
         },
         "/song/search": {
             "get": {
-                "description": "Поиск песни по заданным параметрам",
+                "description": "Поиск песни по заданным параметрам.",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Поиск песни",
+                "summary": "Поиск песни.",
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Текст встречающийся в названии группы.",
                         "name": "group",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "description": "Текст встречающийся в ссылке.",
                         "name": "link",
                         "in": "query"
                     },
                     {
                         "type": "integer",
+                        "description": "Номер страницы.",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
+                        "description": "Размер страницы.",
                         "name": "pageSize",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "name": "releaseDate",
+                        "description": "Конечная дата периода поиска песни.",
+                        "name": "releaseEndDate",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "description": "Начальная дата периода поиска песни.",
+                        "name": "releaseStartDate",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Текст встречающийся в названии песни.",
                         "name": "song",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "description": "Текст встречающийся в тексте песни.",
                         "name": "text",
                         "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/SongDescription"
-                            }
-                        }
+                        "description": "Ok"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             }
@@ -217,22 +234,26 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Название группы (обязательно).",
                         "name": "group",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
+                        "description": "Номер страницы.",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
+                        "description": "Размер страницы.",
                         "name": "pageSize",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "description": "Название песни (обязательно).",
                         "name": "song",
                         "in": "query",
                         "required": true
@@ -261,35 +282,23 @@
             ],
             "properties": {
                 "group": {
+                    "description": "Название группы (обязательно).",
                     "type": "string"
                 },
                 "link": {
+                    "description": "Ссылка на песню.",
                     "type": "string"
                 },
                 "releaseDate": {
+                    "description": "Дата создания песни.",
                     "type": "string"
                 },
                 "song": {
+                    "description": "Название песни (обязательно).",
                     "type": "string"
                 },
                 "text": {
-                    "type": "string"
-                }
-            }
-        },
-        "SongDescription": {
-            "type": "object",
-            "properties": {
-                "group": {
-                    "type": "string"
-                },
-                "link": {
-                    "type": "string"
-                },
-                "releaseDate": {
-                    "type": "string"
-                },
-                "song": {
+                    "description": "Текст песни.",
                     "type": "string"
                 }
             }
@@ -302,18 +311,23 @@
             ],
             "properties": {
                 "group": {
+                    "description": "Название группы (обязательно).",
                     "type": "string"
                 },
                 "link": {
+                    "description": "Ссылка на песню.",
                     "type": "string"
                 },
                 "releaseDate": {
+                    "description": "Дата создания песни.",
                     "type": "string"
                 },
                 "song": {
+                    "description": "Название песни (обязательно).",
                     "type": "string"
                 },
                 "text": {
+                    "description": "Текст песни.",
                     "type": "string"
                 }
             }
